--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,8 +1,11 @@
 /* COMPONENTS */
 .header {
+  align-items: center;
   display: flex;
+  margin-bottom: 16px;
 }
 .header .title {
+  font-size: 2em;
   margin: 0;
 }
 
