--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,59 @@
+/* GENERAL */
+
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-weight: normal;
+  margin: 0;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 8px;
+  padding-right: 8px;
+  width: 100%;
+}
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1320px;
+  }
+}
+
+.mb-3 {
+  margin-bottom: 24px;
+}
+
 /* COMPONENTS */
 
 // Header
@@ -8,6 +64,7 @@
 
   .title {
     font-size: 2em;
+    font-weight: bold;
     margin: 0;
   }
 }
@@ -15,4 +72,86 @@
 // Logo
 .logo {
   height: 2em;
+}
+
+// Table
+.table {
+  width: 100%;
+
+  .th {
+    display: none;
+  }
+
+  .tr {
+    border: 1px solid lightgrey;
+    border-radius: 4px;
+    padding: 8px;
+
+    & + .tr {
+      margin-top: 16px;
+    }
+
+    & > :first-child {
+      margin-bottom: 8px;
+    }
+  }
+
+  .td {
+    word-wrap: break-word;
+
+    & :first-child {
+      font-weight: bold;
+    }
+
+    & + .td {
+      margin-top: 4px;
+    }
+  }
+}
+@media (min-width: 992px) {
+  .table {
+    width: 100%;
+
+    .table-body {
+      max-height: 400px;
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
+
+    .th,
+    .tr {
+      border: none;
+      display: flex;
+      padding: 0;
+    }
+
+    .th {
+      background-color: lightgrey;
+      font-weight: bold;
+    }
+
+    .tr {
+      & + .tr {
+        margin: 0;
+      }
+
+      & > :first-child {
+        margin: 0;
+      }
+
+      & .td :first-child {
+        display: none;
+      }
+    }
+
+    .td {
+      border: 1px solid grey;
+      padding: 8px;
+      word-wrap: break-word;
+
+      & + .td {
+        margin-top: 0;
+      }
+    }
+  }
 }
