--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,58 @@
+/* GENERAL */
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-weight: normal;
+  margin: 0;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 8px;
+  padding-right: 8px;
+  width: 100%;
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1320px;
+  }
+}
+.mb-3 {
+  margin-bottom: 24px;
+}
+
 /* COMPONENTS */
 .header {
   align-items: center;
@@ -6,9 +61,75 @@
 }
 .header .title {
   font-size: 2em;
+  font-weight: bold;
   margin: 0;
 }
 
 .logo {
   height: 2em;
+}
+
+.table {
+  width: 100%;
+}
+.table .th {
+  display: none;
+}
+.table .tr {
+  border: 1px solid lightgrey;
+  border-radius: 4px;
+  padding: 8px;
+}
+.table .tr + .tr {
+  margin-top: 16px;
+}
+.table .tr > :first-child {
+  margin-bottom: 8px;
+}
+.table .td {
+  word-wrap: break-word;
+}
+.table .td :first-child {
+  font-weight: bold;
+}
+.table .td + .td {
+  margin-top: 4px;
+}
+
+@media (min-width: 992px) {
+  .table {
+    width: 100%;
+  }
+  .table .table-body {
+    max-height: 400px;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+  .table .th,
+.table .tr {
+    border: none;
+    display: flex;
+    padding: 0;
+  }
+  .table .th {
+    background-color: lightgrey;
+    font-weight: bold;
+  }
+  .table .tr + .tr {
+    margin: 0;
+  }
+  .table .tr > :first-child {
+    margin: 0;
+  }
+  .table .tr .td :first-child {
+    display: none;
+  }
+  .table .td {
+    border: 1px solid grey;
+    padding: 8px;
+    word-wrap: break-word;
+  }
+  .table .td + .td {
+    margin-top: 0;
+  }
 }/*# sourceMappingURL=main.css.map */
